// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tooltip Should keep displayed tooltip when hover it 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 3`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 4`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-mg-button">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 3`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'clickDocument' }, leave with %s element 4`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-mg-button">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 3`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 4`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-mg-button">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        blu
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element with given placement 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="top" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: auto; margin: 0; right: auto; bottom: 0; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display false 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display false 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display true 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden data-show id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display true 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    batman
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        batman
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update button wrapper dynamically 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="identifier" disabled="" identifier="identifier">
    button.disabled
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update button wrapper dynamically 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="identifier" disabled="" identifier="identifier">
    button.disabled
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-button wrapper dynamically 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip Should update mg-button wrapper dynamically 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-disabled="true" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button.disabled
  </mg-button>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 1`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 2`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 3`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 4`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 5`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 6`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <span aria-describedby="identifier" role="button" tabindex="0">
    span
  </span>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 7`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 8`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 9`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 10`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 11`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 12`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <button aria-describedby="blu identifier">
    button
  </button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 13`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 14`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 15`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 16`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 17`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 18`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-icon aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 19`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 20`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 21`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 22`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 23`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 24`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <mg-button aria-describedby="identifier" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 25`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 26`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 27`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 28`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 29`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;

exports[`mg-tooltip render Should render with tooltip 30`] = `
<mg-tooltip>
  <mock:shadow-root>
    <slot></slot>
    <slot name="content"></slot>
  </mock:shadow-root>
  <div aria-describedby="identifier" class="mg-tooltip__mg-button-wrapper">
    <mg-button aria-disabled="true" role="button" tabindex="0">
      <mock:shadow-root>
        <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
          <div class="mg-button__content">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      mg-button.disabled
    </mg-button>
  </div>
  <mg-tooltip-content data-popper-placement="bottom" data-popper-reference-hidden id="identifier" role="tooltip" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <mock:shadow-root>
      <span class="mg-tooltip-content__message">
        My tooltip message
      </span>
      <slot name="arrow"></slot>
    </mock:shadow-root>
    <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
  </mg-tooltip-content>
</mg-tooltip>
`;
